cmake_minimum_required(VERSION 3.5)
project(zrf)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/usr/local/include src/include)
link_directories(/usr/local/lib)
link_libraries(zmq)
add_executable(rmi-test src/test/RMITest.cpp)
add_executable(serializer-test src/test/SerializerTest.cpp)
add_executable(rawiostream-test src/test/RAWInOutStreamTest.cpp)